# FamilyOS

./: .env.example  .gitignore  README.md  next-env.d.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
agent/: README.md  pyproject.toml
agent/app/: __init__.py  cli.py  config.py  db.py  mcp_stub.py  schemas.py
agent/app/graph/: __init__.py  nodes.py  state.py  workflow.py
agent/app/services/: __init__.py  events.py  knowledge.py  people.py  tasks.py
agent/app/tools/: __init__.py  familyos_tools.py
app/: actions.ts  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
app/auth/: actions.ts
app/events/: page.tsx
app/knowledge/: page.tsx
app/login/: page.tsx
app/people/: page.tsx
app/search/: page.tsx
app/tasks/: page.tsx
app/tasks/new/: page.tsx
components/: app-shell.tsx  data-table.tsx  empty-state.tsx  entity-form.tsx  forms.tsx  page-header.tsx  section-card.tsx  stat-card.tsx
components/auth/: login-form.tsx  logout-button.tsx
components/search/: global-search-form.tsx  search-results.tsx
docs/: chatgpt-familyos-context.md  mcp-setup.md  telegram-digests.md  vercel-deployment.md
lib/: data.ts  types.ts  utils.ts
lib/supabase/: browser.ts  client.ts  middleware.ts  server.ts
supabase/: seed.sql
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20250316180000_init_familyos.sql  20250316203000_mcp_helper_views.sql  20250316204500_mcp_write_helpers.sql  20250317103000_authenticated_rls_policies.sql  20250317120000_telegram_digest_support.sql  20250317133000_schedule_telegram_digests.sql  (+1 more)
(+9 files in other folders)
